--- a/app/AppImageBuilder.yml
+++ b/app/AppImageBuilder.yml
@@ -5,6 +5,7 @@ script:
  - cp -r build/linux/x64/release/bundle AppDir
  - mkdir -p AppDir/usr/share/icons/hicolor/64x64/apps/
  - cp linux/debian/usr/share/icons/hicolor AppDir/usr/share/icons/hicolor -r
+   cp -r linux/debian/usr/share/metainfo/dev.linwood.butterfly.appdata.xml AppDir/usr/share/metainfo/
 AppDir:
   path: ./AppDir
   app_info:
@@ -60,7 +61,7 @@ AppDir:
       image: appimagecrafters/tests-env:ubuntu-xenial
       command: ./AppRun
       use_host_x: true
-  runtime: 
+  runtime:
     env:
       GDK_BACKEND: x11
       GIO_MODULE_DIR: $APPDIR/usr/lib/x86_64-linux-gnu/gio/modules/
