--- a/app/build.yaml
+++ b/app/build.yaml
@@ -8,3 +8,7 @@ targets:
       freezed:
         options:
           union_key: type
+          # `when` and `map` can be enabled/disabled entirely by setting them to `true`/`false`
+          map: false
+          # We can also enable/disable specific variants of `when`/`map` by setting them to `true`/`false`:
+          when: false
