--- a/app/AppImageBuilder.yml
+++ b/app/AppImageBuilder.yml
@@ -4,6 +4,7 @@ script:
  - rm -rf AppDir || true
  - cp -r build/linux/x64/release/bundle AppDir
  - mkdir -p AppDir/usr/share/icons/hicolor/64x64/apps/
+ - mkdir -p AppDir/usr/share/metainfo/
  - cp linux/debian/usr/share/icons/hicolor AppDir/usr/share/icons/hicolor -r
  - cp linux/debian/usr/share/metainfo/dev.linwood.butterfly.appdata.xml AppDir/usr/share/metainfo/
 
