--- a/api/pubspec.yaml
+++ b/api/pubspec.yaml
@@ -4,7 +4,7 @@ version: 2.2.0-beta.1
 publish_to: none
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   archive: ^3.4.10
@@ -19,7 +19,7 @@ dependencies:
     git:
       url: https://github.com/LinwoodDev/dart_pkgs
       path: packages/lw_file_system_api
-      ref: 3cf054ad60aa87507a8c4a6d2fdf61625da39e3a
+      ref: b76f064b45e41a8ca1f3efae3da945edb08d47bd
 
 dev_dependencies:
   test: ^1.25.3
