--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   file_selector: ^1.0.3
   phosphor_flutter: ^2.1.0
   replay_bloc: ^0.2.7
-  share_plus: ^10.0.0
+  share_plus: ^10.0.1
   package_info_plus: ^8.0.0
   idb_shim: ^2.4.1+1
   go_router: ^14.1.0
@@ -45,15 +45,14 @@ dependencies:
   bloc_concurrency: ^0.2.5
   camera: ^0.11.0
   camera_windows: ^0.2.1+9
-  window_manager: ^0.3.8
+  window_manager: ^0.4.0
   flex_color_scheme:
     git:
       url: https://github.com/rydmike/flex_color_scheme
       ref: e33c22a3e6f2326e73830b3d6e6442e8bef5ad9f
   json_annotation: ^4.9.0
   path: ^1.8.3
-  printing: ^5.12.0
-  js: ^0.7.1
+  printing: ^5.13.1
   pdf: ^3.10.8
   http: ^1.2.1
   flutter_secure_storage: ^9.0.0
@@ -72,12 +71,12 @@ dependencies:
   material_leap:
     git:
       url: https://github.com/LinwoodDev/dart_pkgs.git
-      ref: 8dc38c743c8dc3450e5c5a2f64536ef590e8d376
+      ref: a29a889a9cb9be8cf753a52482406bdcecfa924d
       path: packages/material_leap
   lw_sysapi:
     git:
       url: https://github.com/LinwoodDev/dart_pkgs.git
-      ref: bf247737e215187d1f643f76d0b3a29ed934ecbd
+      ref: 21808e89bb6239f0b39367d0c00b0b14f5273992
       path: packages/lw_sysapi
   networker:
     git:
@@ -92,7 +91,7 @@ dependencies:
   lw_file_system:
     git:
       url: https://github.com/LinwoodDev/dart_pkgs.git
-      ref: 85bcfe58ed56045278a0553dc74313fd618baca4
+      ref: 21808e89bb6239f0b39367d0c00b0b14f5273992
       path: packages/lw_file_system
   flutter_localized_locales: ^2.0.5
   dynamic_color: ^1.7.0
@@ -102,6 +101,7 @@ dependencies:
   image: ^4.1.7
   one_dollar_unistroke_recognizer: ^1.2.0
   super_clipboard: ^0.8.11
+  web: ^1.0.0
 dev_dependencies:
   flutter_native_splash: ^2.4.0
   #flutter_launcher_icons: ^0.11.0
@@ -115,7 +115,12 @@ dev_dependencies:
   espresso: ^0.4.0
   freezed: ^2.5.2
 dependency_overrides:
-  flutter_secure_storage_web: ^2.0.0-beta.1
+  web: ^1.0.0
+  flutter_secure_storage_web:
+    git:
+      url: https://github.com/CodeDoctorDE/flutter_secure_storage.git
+      path: flutter_secure_storage_web
+      ref: 1d7b32bde7910bc2ffd1db5245ee0b2478ff4b7d
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter.
